--- a/SuggestionAppUI/appsettings.json
+++ b/SuggestionAppUI/appsettings.json
@@ -9,5 +9,18 @@
   "DatabaseName": "devsuggestionapp",
   "ConnectionStrings": {
     "MongoDB": "<Override bt secret json >"
+  },
+  "AzureAdB2C": {
+    "Instance": "https://sashkoauth.b2clogin.com/",
+    // Use either a secret or a certificate. ClientCertificates are recommended.
+    "ClientSecret": "9fdaf9f6-68f6-47d0-9224-478548594ae7",
+    "ClientCertificates": [
+    ],
+    "ClientId": "4bb9078a-c2e0-482a-baeb-445b8ce877bc",
+    "CallbackPath": "/signin-oidc",
+    "Domain": "sashkoauth.onmicrosoft.com",
+    "SignUpSignInPolicyId": "B2C_1_susi",
+    "ResetPasswordPolicyId": "B2C_1_reset",
+    "EditProfilePolicyId": "B2C_1_edit"
   }
 }
