--- a/SuggestionAppUI/appsettings.json
+++ b/SuggestionAppUI/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "DatabaseName": "devsuggestionapp",
   "ConnectionStrings": {
-    "MongoDB": "<Override bt secret json >"
+    "MongoDB": "<Override by secret json >"
   },
   "AzureAdB2C": {
     "Instance": "https://sashkoauth.b2clogin.com/",
